--- a/main.yml
+++ b/main.yml
@@ -6,6 +6,6 @@
 
   - name: Remove image
     docker_image:
-      state: absent
+      state: force_absent
       name: 192.168.218.130:80/portalapp/portalappimage
       tag: latest
