--- a/main.yml
+++ b/main.yml
@@ -6,6 +6,7 @@
 
   - name: Remove image
     docker_image:
-      force_absent: yes
+      state: absent
+        force_absent: yes
       name: 192.168.218.130:80/portalapp/portalappimage
       tag: latest
