--- a/main.yml
+++ b/main.yml
@@ -6,7 +6,7 @@
 
   - name: Remove image
     docker_image:
-      state: absent
       force_absent: yes
-      name: 192.168.218.130:80/portalapp/portalappimage
+      state: absent
+      name: 192.168.218.130:80/smapp/smappimage
       tag: latest
